# Lunar-Tear

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENCE  modderinstructions.md  readme.md  vcpkg.json
LunarTearLoader/: CMakeLists.txt  devdocs.md  readme.md
LunarTearLoader/include/: tether.h
LunarTearLoader/src/: DLLMain.cpp  Init.cpp  Init.h  Launcher.cpp  Logger.cpp  Logger.h  LunarTearLoader.cpp  ModLoader.cpp  ModLoader.h  launcher.cpp  stubs.asm  tex.h  version.rc
LunarTearLoader/src/API/: LunarTear.h  api.cpp  api.h
LunarTearLoader/src/Common/: Backup.h  Dump.cpp  Dump.h  Json.h  Logger.cpp  Logger.h  Patch.cpp  Patch.h  SHA256.cpp  SHA256.h  Save.cpp  Save.h  Settings.h  base16.h
LunarTearLoader/src/Formats/: TextureFormats.h
LunarTearLoader/src/Game/: Functions.cpp  Functions.h  Globals.cpp  Globals.h  Strings.cpp  Strings.h  TextureFormats.h  Types.h  Weapons.cpp  Weapons.h  d3d11.cpp  d3d11.h  dinput8.h
LunarTearLoader/src/Hooks/: EnumDevicesHooks.cpp  FPSUnlockHooks.cpp  HookStubs.asm  Hooks.h  LuaDebugHooks.cpp  SaveHooks.cpp  ScriptHook.cpp  ScriptHooks.cpp  ScriptInjectionHooks.cpp  ScriptInjectionStubs.asm  ScriptLoadingHooks.cpp  ScriptLoadingStubs.asm  ScriptStubs.asm  ScriptUpdateHooks.cpp  StringHooks.cpp  TableHook.cpp  TableHooks.cpp  TableStubs.asm  TextureHook.cpp  TextureHooks.cpp  VFSHooks.cpp  WeaponLoadHooks.cpp  Weapons.h
LunarTearLoader/src/Lua/: CallbackQueue.cpp  CallbackQueue.h  CoreBindings.cpp  CoreBindings.h  LuaCommandQueue.cpp  LuaCommandQueue.h
LunarTearLoader/src/VFS/: ArchivePatcher.cpp  ArchivePatcher.h  PatchInfo.cpp  PatchInfo.h
SETTBLLEditor/: cmakelists.txt  readme.md
SETTBLLEditor/schemas/: enemy.schema.json  enemy_group.schema.json
SETTBLLEditor/src/: main.cpp  mainwindow.cpp  mainwindow.h  schema.h  spatialentitymodel.cpp  spatialentitymodel.h  stbltablemodel.cpp  stbltablemodel.h
Third Party Licenses/: SpecialK-RadicalReplicant.txt
UnsealedVerses/: cmakelists.txt
UnsealedVerses/src/: ArchiveCommand.h  Common.h  CreateWeaponAsset.h  FindEntryCommand.h  TextureConvertCommand.h  TexturePatchCommand.h  UnarchiveCommand.h  UnpackCommand.h  main.cpp
docs/: Game Lua API.md  LT Lua API.md  Loose Textures.md  Main.md  Plugins.md  Scripts.md  Tables.md  Textures.md  archives
documentation/: scripts.md  stbl.md  types.h
gamedocs/: difficulty.md  endings.md  scripts.md
libreplicant/: cmakelists.txt  readme.md
libreplicant/include/replicant/: arc.h  bxon.h  dds.h  io.h  pack.h  patcher.h  stbl.h  tpActorAssetParam.h  tpArchiveFileParam.h  tpGxTexHead.h  tpXonAssetHeader.h  weapon.h  writer.h
libreplicant/include/replicant/arc/: arc.h  error.h
libreplicant/include/replicant/bxon/: archive_param.h  archive_param_builder.h  error.h  texture.h  texture_builder.h
libreplicant/include/replicant/core/: common.h  io.h  reader.h  writer.h
libreplicant/src/: arc.cpp  bxon.cpp  dds.cpp  pack.cpp  patcher.cpp  stbl.cpp  tpActorAssetParam.cpp  tpArchiveFileParam.cpp  tpGxTexHead.cpp  tpXonAssetHeader.cpp  weapon.cpp
libreplicant/src/arc/: arc.cpp
libreplicant/src/bxon/: archive_param.cpp  archive_param_builder.cpp  bxon.cpp  common.h  texture.cpp  texture_builder.cpp
libreplicant/src/pack/: pack.cpp
libreplicant/src/stbl/: stbl.cpp
libsettbll/: cmakelists.txt  readme.md  settbll.cpp  settbll.h
misc/: GetEntityList.lua  GetGameFlags.lua  LocaleDump.lua  RTTIinspector.lua  StringIdLookup.lua  StringLookup.lua  batchDecompile.py  correctMojibake.py  flagLookup.lua  getPlayerItemCount.lua  pack_to_pngs.py  pngs_to_pack.py  setFlags.lua  setPlayerItemCount.lua
other/: ParseSTBL.lua  ghidra_ignore_msvc_security_cooke.xml
